--- a/styles/style.css
+++ b/styles/style.css
@@ -27,7 +27,7 @@
   background-repeat: no-repeat;
 }
 .logo_place_header {
-  background-image: url("/how-to-learn-bootcamp/images/logo_place_header.svg");
+  background-image: url("../images/logo_place_header.svg");
   position: absolute;
   top: 30px;
   left: 64px;
@@ -245,7 +245,7 @@
 .kaufman__triangle {
   width: 877px;
   height: 877px;
-  background-image: url("/how-to-learn-bootcamp/images/kaufman-triangle.svg");
+  background-image: url("../images/kaufman-triangle.svg");
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
@@ -274,7 +274,7 @@
   justify-content: space-between;
 }
 .logo__place_footer {
-  background-image: url("/how-to-learn-bootcamp/images/logo_place_footer.svg");
+  background-image: url("../images/logo_place_footer.svg");
 }
 .footer__author {
   line-height: 25px;
