--- a/styles/style.css
+++ b/styles/style.css
@@ -36,8 +36,8 @@
   width: 730px;
   line-height: 96px;
   font-size: 102px;
-  margin-top: auto;
-  margin-bottom: auto;
+  margin-top: 0;
+  margin-bottom: 0;
   margin-left: 64px;
   font-weight: 600;
   z-index: 2;
@@ -49,6 +49,8 @@
   left: 64px;
   bottom: 30px;
   font-size: 18px;
+  margin: 0;
+  z-index:2;
 }
 .header__main-illustration {
   position: absolute;
@@ -58,7 +60,8 @@
   right: 0;
   bottom: 0;
   z-index: 1;
-}
+  object-fit: cover;
+ }
 .header__link {
   color: #2f80ed;
   text-decoration: none;
@@ -81,7 +84,6 @@
   margin-top: 100px;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 100px;
   width: 80%;
 }
 .two-columns__brief {
@@ -90,7 +92,7 @@
   font-weight: normal;
   width: 175px;
   color: #2f80ed;
-  margin-top: 0;
+  margin: 0;
 }
 .two-columns__main-text {
   width: 80%;
@@ -101,6 +103,9 @@
   font-size: 24px;
   font-weight: normal;
   margin: 0 0 30px 0;
+}
+.two-columns__paragraph:last-child {
+  margin: 0 0 0 0;
 }
 .two-columns__span-accent {
   line-height: 34px;
@@ -117,7 +122,7 @@
 }
 .section-subtitle {
   text-align: center;
-  margin: auto;
+  margin: 0;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
@@ -127,7 +132,7 @@
   justify-content: space-between;
   flex-wrap: wrap;
   width: 1100px;
-  margin: auto;
+  margin: 0 auto 0;
   margin-bottom: 100px;
 }
 .table__cell {
@@ -138,6 +143,7 @@
   line-height: 1.15;
   font-size: 24px;
   font-weight: 600;
+  margin: 0;
 }
 .table__text {
   line-height: 1.2;
@@ -149,7 +155,7 @@
 .feynman {
   display: flex;
   background-color: #f2f2f2;
-  height: 890px;
+  min-height: 890px;
   flex-direction: column;
   position: relative;
 }
@@ -233,9 +239,9 @@
 }
 .table__heading_theme_dark {
   line-height: 1.15;
-  font-size: 34px;
-  margin-bottom: 20px;
-  font-weight: normal;
+  font-size: 24px;
+  margin: 0 auto 0;
+  font-weight: 600;
 }
 .table__text_theme_dark {
   line-height: 1.2;
@@ -273,7 +279,7 @@
   flex-direction: column;
   justify-content: space-between;
 }
-.logo__place_footer {
+.logo_place_footer {
   background-image: url("../images/logo_place_footer.svg");
 }
 .footer__author {
@@ -289,8 +295,9 @@
   font-size: 18px;
   font-weight: 600;
   color: #f2f2f2;
+  margin-top: 0;
 }
-.footer__column-links{
+.footer__column-links {
   margin-top: 20px;
   margin-bottom: 16px;
 }
@@ -303,8 +310,18 @@
   color: #f2f2f2;
   text-decoration: none;
   align-items: center;
- }
- .icon-size{
+}
+.footer__social-icon {
+  display: flex;
+  flex-direction: row;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+  color: #f2f2f2;
+  text-decoration: none;
+  align-items: center;
+}
+.icon-size {
   height: 16px;
   width: 16px;
   margin-right: 10px;
