--- a/blocks/footer/__column-link/footer__column-link.css
+++ b/blocks/footer/__column-link/footer__column-link.css
@@ -1,14 +1,14 @@
 .footer__column-link {
-    display: flex;
-    flex-direction: row;
-    line-height: 30px;
-    font-size: 18px;
-    font-weight: normal;
-    color: #f2f2f2;
-    text-decoration: none;
-    align-items: center;
-    opacity: 0.8;
-  }
-.footer__column-link:hover{
-    opacity: 1;
+  display: flex;
+  flex-direction: row;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+  color: #f2f2f2;
+  text-decoration: none;
+  align-items: center;
+  transition: opacity, 1s;
+}
+.footer__column-link:hover {
+  opacity: 0.6;
 }
