--- a/blocks/footer/__social-icon/footer__social-icon.css
+++ b/blocks/footer/__social-icon/footer__social-icon.css
@@ -1,15 +1,9 @@
 .footer__social-icon {
-    display: flex;
-    flex-direction: row;
-    line-height: 30px;
-    font-size: 18px;
-    font-weight: normal;
-    color: #f2f2f2;
-    text-decoration: none;
-    align-items: center;
-    opacity: 0.8;
-  }
-
-.footer__social-icon:hover{
-    opacity: 1;
+  height: 16px;
+  width: 16px;
+  margin-right: 10px;
+  opacity: 0.8;
+}
+.footer__social-icon:hover {
+  opacity: 1;
 }
