--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -1,9 +1,9 @@
 .header__link {
-    color: #2f80ed;
-    text-decoration: none;
-    opacity: 0.8;
-  }
-  
-  .header__link:hover{
-    opacity: 1;
-  }
+  color: #2f80ed;
+  text-decoration: none;
+  transition: opacity, 1s;
+}
+
+.header__link:hover {
+  opacity: 0.6;
+}
